# SDS2Roster

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: ARCHITECTURE.md  AZURE_DEPLOYMENT.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/architecture/: 01_architecture_overview.md  02_c4_context_diagram.md  03_c4_container_diagram.md  04_c4_component_diagram_javascript.md  04_c4_component_diagram_python.md  05_data_flow_design.md  06_security_architecture.md  07_deployment_architecture.md  08_upload_api_specification.md
docs/project/: 01_project_management_plan.md  02_risk_management_plan.md  03_test_plan.md  04_operations_plan.md  05_quality_assurance_plan.md  06_change_management_plan.md
docs/requirements/: 01_project_overview.md  02_functional_requirements.md  03_non_functional_requirements.md  04_user_stories.md  05_data_mapping.md  README.md
src/sds2roster/: __init__.py  cli.py  converter.py
src/sds2roster/azure/: __init__.py  blob_storage.py  table_storage.py
src/sds2roster/models/: __init__.py  oneroster.py  sds.py
src/sds2roster/parsers/: __init__.py  oneroster_writer.py  sds_parser.py
src/sds2roster/utils/: __init__.py  validators.py
tests/: conftest.py
tests/benchmark/: test_performance.py
tests/fixtures/sds/: school.csv  section.csv  student.csv  studentEnrollment.csv  teacher.csv  teacherRoster.csv
tests/integration/: README.md  __init__.py  test_azure_e2e.py  test_cli_azure_e2e.py  test_end_to_end.py
tests/unit/: test_blob_storage.py  test_cli.py  test_converter.py  test_oneroster_models.py  test_oneroster_writer.py  test_sds_models.py  test_sds_parser.py  test_table_storage.py  test_validators.py
